<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Better</string>
    <string name="pinyinbiao">拼音</string>
    <string name="hand_write">手写</string>
    <string name="short_dialog">对话</string>
    <string name="bihua_table">笔画</string>
    <string name="char_table">练字</string>
    <string name="start_class">初级课程</string>
    <string name="action_settings">Settings</string>
    <string name="login">登  录</string>
    <string name="nologin">未登录</string>
    <string name="forget_pw">忘记密码？</string>
    <string name="is_new_user">新用户？</string>
    <string name="register">注  册</string>
    <string name="confirm_email">验   证</string>
    <string name="again">again</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="update_alert">更新</string>

</resources>
