<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E7E6"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:background="@color/pro_shenblue"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/pro_white"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/et_login_border"
        android:drawableLeft="@drawable/icon_login_user"
        android:hint="@string/email"
        android:paddingLeft="2dp"
        android:singleLine="true"
        android:textColor="@color/theme_font_color" />

    <TextView
        android:id="@+id/tvWarningEmail"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingLeft="2dp"
        android:text="warnig"
        android:textColor="@color/red"
        android:visibility="invisible" />

    <EditText
         android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/et_login_border"
        android:drawableLeft="@drawable/icon_login_pw"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="2dp"
        android:singleLine="true"
        android:textColor="@color/theme_font_color" />

    <TextView
        android:id="@+id/tvWarningPassword"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingLeft="2dp"
        android:text="warnig"
        android:textColor="@color/red"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/etAgain"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/et_login_border"
        android:drawableLeft="@drawable/icon_login_pw"
        android:hint="@string/again"
        android:inputType="textPassword"
        android:paddingLeft="2dp"
        android:singleLine="true"
        android:textColor="@color/theme_font_color" />

    <TextView
        android:id="@+id/tvWarningAgain"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingLeft="2dp"
        android:text="warnig"
        android:textColor="@color/red"
       android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/login_btn"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/confirm_email"
            android:textColor="@color/theme_font_color" />
    </RelativeLayout>

</LinearLayout>